Using proper HTML

--- a/paragraphs.html
+++ b/paragraphs.html
@@ -1,2 +1,12 @@
-<p><b> This page has two paragraphs containing text. The first one is bolded.</b></p>
-<p> <i> The second paragraph os entirely in italics. </i></p>
+<!DOCTYPE html>
+<!-- A gallery page -->
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Sonia Espinosa</title>
+	</head>
+	<body>
+		<p><b> This page has two paragraphs containing text. The first one is bolded.</b></p>
+		<p> <i> The second paragraph os entirely in italics. </i></p>
+	</body>
+</html>
