Using proper HTML

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>A <b>photo</b> gallery application</p>
+<!DOCTYPE html>
+<!-- A gallery page -->
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Sonia Espinosa</title>
+	</head>
+	<body>
+		<p>A <b>photo</b> gallery application</p>
+	</body>
+</html>
