--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<title>Sonia Espinosa</title>
 	</head>
 	<body>
-		<p>A <b>photo</b> gallery application</p>
+		<h1>A photo gallery application</h1>
+		<div> 
+		<h2>Galleries</h2>
+			<a href='cats.html'>Cats</a>
+		</div>
+
 	</body>
 </html>
