--- a/cats.html
+++ b/cats.html
@@ -7,6 +7,6 @@
 	</head>
 	<body>
 		<h1>Cats</h1>
-		<p>There are no pictures here yet.</p>
+		<img src="img/grumpy_cat.png" alt= "photo of a grumpy cat.">
 	</body>
 </html>
