--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <!-- A gallery page -->
 <html>
 	<head>
+		<style>
+		#introduction {
+  			color: gray;
+}
+		
+		#galleries li a {
+  			color: green;
+}
+  h1 {
+    color: magenta;
+  }
+body {
+  font-size: 20px;
+}
+
+</style>
 		<meta charset="UTF-8">
 		<title>Sonia Espinosa</title>
 	</head>
 	<body>
 		<h1>A photo gallery application</h1>
-		<div> 
+		<div id="introduction"> 
+			<p>Below are a list of galleries that contain images of animals.</p></div>
+
+		<div id="galleries"> 
 		<h2>Galleries</h2>
 			<ul>
 				<li><a href='cats.html'>Cats</a></li>
