--- a/cats.html
+++ b/cats.html
@@ -4,9 +4,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Sonia Espinosa</title>
+		<link rel="stylesheet" type="text/css" href="application.css">
 	</head>
 	<body>
 		<h1>Cats</h1>
 		<img src="img/grumpy_cat.png" alt= "photo of a grumpy cat.">
+		<img src="img/colonel_meow.jpg" alt= "photo of a grumpy cat.">
 	</body>
 </html>
