--- a/dogs.html
+++ b/dogs.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Sonia Espinosa</title>
+		<link rel="stylesheet" type="text/css" href="application.css">
 	</head>
 	<body>
 		<h1>Dogs</h1>
