--- a/index.html
+++ b/index.html
@@ -2,25 +2,10 @@
 <!-- A gallery page -->
 <html>
 	<head>
-		<style>
-		#introduction {
-  			color: gray;
-}
-		
-		#galleries li a {
-  			color: green;
-}
-  h1 {
-    color: magenta;
-  }
-body {
-  font-size: 20px;
-}
-
-</style>
 		<meta charset="UTF-8">
 		<title>Sonia Espinosa</title>
-	</head>
+		<link rel="stylesheet" type="text/css" href="application.css">
+</head>
 	<body>
 		<h1>A photo gallery application</h1>
 		<div id="introduction"> 
